--- a/qa-stockwell/build.gradle
+++ b/qa-stockwell/build.gradle
@@ -13,23 +13,64 @@ plugins {
 
 repositories {
     // Use Maven Central for resolving dependencies.
-    mavenCentral()
+    //mavenCentral()
+    jcenter()
 }
 
+test {
+    useTestNG() {
+        //dependsOn cleanTest
+        useDefaultListeners = true
+    }
+}
 dependencies {
    
     // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
+   		api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:31.0.1-jre'
+   	 implementation 'com.google.guava:guava:31.0.1-jre'
     
+    // https://mvnrepository.com/artifact/log4j/log4j
+	implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+	// https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
+	testImplementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '2.0.0-alpha1'
+	
+	// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+	implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'
+	
+     // https://mvnrepository.com/artifact/commons-logging/commons-logging
+	implementation group: 'commons-logging', name: 'commons-logging', version: '1.2'
+	
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
-	implementation("org.seleniumhq.selenium:selenium-java:4.11.0")
+	//implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.11.0'
+implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
 
 	// https://mvnrepository.com/artifact/org.testng/testng
-	testImplementation("org.testng:testng:7.4.0")
+	testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
+
+	//Use JUnit test framework
+    testImplementation 'junit:junit:4.12'
     
+	// https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+	
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+	
+	// https://mvnrepository.com/artifact/org.apache.poi/poi
+	//implementation group: 'org.apache.poi', name: 'poi', version: '5.2.0'
+	
+	// https://mvnrepository.com/artifact/org.hellojavaer/poi-excel-utils
+	implementation group: 'org.hellojavaer', name: 'poi-excel-utils', version: '2.0.0-beta'
+		
+    // https://mvnrepository.com/artifact/com.aventstack/extentreports
+	implementation group: 'com.aventstack', name: 'extentreports', version: '5.0.7'
+	
+	// https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
+	//implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.0.3'
+	
+	
 }
 
 tasks.named('test') {
