--- a/qa-stockwell/build.gradle
+++ b/qa-stockwell/build.gradle
@@ -74,6 +74,6 @@ implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
 }
 
 tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
+    // Use TestNG 
+    useTestNG()
 }
