--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run:
           name: Run Tests inside Docker Container
           command: |
-            docker run my-docker-image npm test  # Example command to run tests
+            docker run my-docker-image  # Example command to run tests
 
 workflows:
   version: 2
