--- a/qa-stockwell/build.gradle
+++ b/qa-stockwell/build.gradle
@@ -27,7 +27,8 @@ test {
 dependencies {
    
     // This dependency is exported to consumers, that is to say found on their compile classpath.
-   		api 'org.apache.commons:commons-math3:3.6.1'
+   		//api 'org.apache.commons:commons-math3:3.6.1'
+		implementation 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    	 implementation 'com.google.guava:guava:31.0.1-jre'
