--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,16 +15,23 @@ jobs:
       - run:
           name: Build Docker Image
           command: |
-            docker build -t my-docker-image .
+            docker build -t automationimage .
 
       # Optionally, you can run tests or other commands inside the Docker container
       - run:
           name: Run Tests inside Docker Container
           command: |
-            docker run my-docker-image  # Example command to run tests
+            docker run -v $(pwd)/reports:/home/seluser/stockwellautomation/qa-stockwell/test-output automationimage  # Example command to run tests
+
+      # Store test report files as artifacts
+      - store_artifacts:
+          path: $(pwd)/reports
+          destination: test-reports
+
 
 workflows:
   version: 2
   build:
     jobs:
       - build
+      - run
