--- a/qa-stockwell/build.gradle
+++ b/qa-stockwell/build.gradle
@@ -19,10 +19,11 @@ repositories {
 
 test {
     useTestNG() {
-        //dependsOn cleanTest
+        dependsOn cleanTest
 		outputDirectory = file("test-output")
         useDefaultListeners = true
 		suites 'src/test/resources/testng.xml'
+		testLogging.showStandardStreams = true
     }
 }
 dependencies {
