--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,11 +21,11 @@ jobs:
       - run:
           name: Run Tests inside Docker Container
           command: |
-            docker run -v /root/project/reports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage  # Example command to run tests
+            docker run -v /root/project/reportsdemo:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage  # Example command to run tests
 
       # Store test report files as artifacts
       - store_artifacts:
-          path: /root/project/TestReports
+          path: /root/project/reportsdemo
           destination: test-reports
 
 
