--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,14 +22,14 @@ jobs:
           name: Run Tests inside Docker Container
           command: |
             docker run -v /root/project/reports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage  # Example command to run tests
-            find . -type f -regex ".*/TestReports" -exec cp {} ~/test-reports \;
+           # find . -type f -regex ".*/TestReports" -exec cp {} ~/test-reports \;
 
 
       # Store test report files as artifacts
       - store_artifacts:
-          path: ~/test-reports
-          #path: /root/project/reports
-          #destination: test-reports
+          #path: ~/test-reports
+          path: /root/project/reports
+          destination: test-reports
 
 
 workflows:
