Updated config file to flush the artifacts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,12 @@ jobs:
           command: |
             docker build -t automationimage .
 
+    # Flush (delete) reports from artifacts
+      - run:
+          name: Flush Reports from Artifacts
+          command: |
+            rm -rf /root/project/reports/*
+            
       # Optionally, you can run tests or other commands inside the Docker container
       - run:
           name: Run Tests inside Docker Container
