--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,14 +21,14 @@ jobs:
       - run:
           name: Run Tests inside Docker Container
           command: |
-            docker run -v /root/project/reports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage  # Example command to run tests
+            docker run -v /root/project/qa-stockwell/TestReports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage  # Example command to run tests
            # find . -type f -regex ".*/TestReports" -exec cp {} ~/test-reports \;
 
 
       # Store test report files as artifacts
       - store_artifacts:
           #path: ~/test-reports
-          path: /root/project/reports
+          path: /root/project/qa-stockwell/TestReports
           destination: test-reports
 
       # List all files in the /root/project/reports folder
