--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
 
       # Install Docker client inside the CircleCI Docker executor
-      - setup_remote_docker
+      - setup_remote_docker:
           docker_layer_caching: false
 
       # Build the Docker image using Dockerfile
