flushing reports before docker run

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,22 +18,23 @@ jobs:
           command: |
             docker build -t automationimage .
 
-      # # Flush (delete) reports from artifacts
-      # - run:
-      #     name: Flush Reports from Artifacts
-      #     command: |
-      #       rm -rf /root/project/qa-stockwell/TestReports/*
+      # Flush (delete) reports from artifacts
+      - run:
+          name: Flush Reports from Artifacts
+          command: |
+            rm -rf /root/project/qa-stockwell/TestReports/*
+            ls -al /root/project/qa-stockwell/TestReports
 
 
       # Optionally, you can run tests or other commands inside the Docker container
       - run:
           name: Run Tests inside Docker Container
           command: |
-            docker volume create test_reports_volume
-            docker run -v test_reports_volume:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage
-            docker volume inspect test_reports_volume
+            # docker volume create test_reports_volume
+            # docker run -v test_reports_volume:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage
+            # docker volume inspect test_reports_volume
           # chmod -R +rw /root/project/qa-stockwell
-          # docker run -v /root/project/qa-stockwell/TestReports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage  # Example command to run tests
+           docker run -v /root/project/qa-stockwell/TestReports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage  # Example command to run tests
            # find . -type f -regex ".*/TestReports" -exec cp {} ~/test-reports \;
             
 
@@ -41,7 +42,7 @@ jobs:
       # Store test report files as artifacts
       - store_artifacts:
           #path: ~/test-reports
-          path: /var/lib/docker/volumes/test_reports_volume/_data
+          path: test_reports_volume
           destination: test-reports
 
       # List all files in the /root/project/reports folder
