--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
       - run:
           name: Run Tests inside Docker Container
           command: |
+            chmod a+w /root/project/qa-stockwell/TestReports
             docker run -v /root/project:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage
          
     # docker run -v /root/project/qa-stockwell/TestReports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage       
