Updated config file by updating path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,12 @@ jobs:
     docker:
       - image: docker:stable
 
+# Flush (delete) reports from artifacts
+      - run:
+          name: Flush Reports from Artifacts
+          command: |
+            rm -rf /root/project/
+            
     steps:
       - checkout
 
@@ -18,12 +24,8 @@ jobs:
           command: |
             docker build -t automationimage .
 
-      # # Flush (delete) reports from artifacts
-      # - run:
-      #     name: Flush Reports from Artifacts
-      #     command: |
-      #       rm -rf /root/project/qa-stockwell/TestReports/*
-      #       ls -al /root/project/qa-stockwell/TestReports
+      
+   
 
 
       # Optionally, you can run tests or other commands inside the Docker container
@@ -31,7 +33,7 @@ jobs:
           name: Run Tests inside Docker Container
           command: |
             chmod a+w /root/project/qa-stockwell/TestReports
-            docker run -v /root/project:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage
+            docker run -v /root/project/qa-stockwell/TestReports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage
          
     # docker run -v /root/project/qa-stockwell/TestReports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage       
     # docker volume create test_reports_volume
@@ -44,7 +46,7 @@ jobs:
       # Store test report files as artifacts
       - store_artifacts:
           #path: ~/test-reports
-          path: /root/project
+          path: /root/project/qa-stockwell/TestReports
           destination: test-reports
 
       # List all files in the /root/project/reports folder
