Updated config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
             # Run tests inside the Docker container
             docker run -v /root/project/qa-stockwell/TestReports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage bash -c '
               pwd
+              ls -al /root/project/qa-stockwell/TestReports
               ls -al /home/seluser/stockwellautomation/qa-stockwell/TestReports
             '
 
