--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,7 @@ jobs:
       - image: docker:stable
 
     steps:
-      # - run:
-      #     name: Flush Reports from Artifacts
-      #     command: |
-      #       rm -rf /root/project/
-
+     
       - checkout
 
       - setup_remote_docker:
@@ -20,29 +16,21 @@ jobs:
           name: Build Docker Image
           command: |
             docker build -t automationimage .
-
-
+            
       - run:
           name: Run Tests inside Docker Container
           command: |
             # docker run -v /root/project/qa-stockwell/TestReports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage 
-            docker run --name my_container automationimage
+            docker run --name automation_container automationimage
 
       - run:
           name: Copy Files from Container
           command: |
-            docker cp my_container:/home/seluser/stockwellautomation/qa-stockwell/TestReports /root/project/qa-stockwell/TestReports
+            docker cp automation_container:/home/seluser/stockwellautomation/qa-stockwell/TestReports /root/project/qa-stockwell/TestReports
 
       - store_artifacts:
           path: /root/project/qa-stockwell/TestReports
           destination: test-reports
-
-      - run:
-          name: List Files in the Folder
-          command: |
-            pwd
-            ls -al 
-            ls -al /root/project/qa-stockwell/TestReports
 
 workflows:
   version: 2
