--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,17 +10,17 @@ jobs:
       - checkout
 
       - setup_remote_docker:
-          docker_layer_caching: false
+          docker_layer_caching: true
 
       - run:
           name: Build Docker Image
           command: |
             docker build -t automationimage .
-            
+
       - run:
           name: Run Tests inside Docker Container
           command: |
-            # docker run -v /root/project/qa-stockwell/TestReports:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage 
+            # docker run -v /root/project/qa-stockwell:/home/seluser/stockwellautomation/qa-stockwell/TestReports automationimage 
             docker run --name automation_container automationimage
 
       - run:
