--- a/qa-stockwell/build.gradle
+++ b/qa-stockwell/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 	
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
 	//implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.11.0'
-implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
 
 	// https://mvnrepository.com/artifact/org.testng/testng
 	testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
@@ -74,6 +74,8 @@ implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
 	// https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
 	//implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.0.3'
 	
+	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	
 }
 
