--- a/qa-stockwell/src/test/resources/ConfigStaging.properties
+++ b/qa-stockwell/src/test/resources/ConfigStaging.properties
@@ -1,3 +1,8 @@
 username= padmavathi@stockwell.ai
-password=PadduUme@85
-current_url=https://staging.stockwell.ai/client/login
+password= PadduUme@85
+current_url= https://staging.stockwell.ai/client/login
+testRailBaseURL= https://365retailmarkets.testrail.net/
+testRailUsername = padmavathi@stockwell.ai
+testRailPassword = PadduUme@85
+testRailBaseURI = add_result_for_case/
+testRailRunID = 4454
