--- a/qa-stockwell/build.gradle
+++ b/qa-stockwell/build.gradle
@@ -29,14 +29,15 @@ test {
 dependencies {
    
     // This dependency is exported to consumers, that is to say found on their compile classpath.
-   		//api 'org.apache.commons:commons-math3:3.6.1'
-		implementation 'org.apache.commons:commons-math3:3.6.1'
+   	//api 'org.apache.commons:commons-math3:3.6.1'
+	implementation 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-   	 implementation 'com.google.guava:guava:31.0.1-jre'
+   	implementation 'com.google.guava:guava:31.0.1-jre'
     
     // https://mvnrepository.com/artifact/log4j/log4j
 	implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+
 	// https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
 	testImplementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '2.0.0-alpha1'
 	
@@ -54,7 +55,7 @@ dependencies {
 	testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
 
 	//Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+   // testImplementation 'junit:junit:4.12'
     
 	// https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
