--- a/qa-stockwell/build.gradle
+++ b/qa-stockwell/build.gradle
@@ -33,8 +33,8 @@ dependencies {
 	implementation group: 'commons-logging', name: 'commons-logging', version: '1.2'
 	
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
-	//implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.11.0'
-    implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
+	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.11.0'
+    
 
 	// https://mvnrepository.com/artifact/org.testng/testng
 	testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
