--- a/qa-stockwell/build.gradle
+++ b/qa-stockwell/build.gradle
@@ -33,8 +33,8 @@ dependencies {
 	implementation group: 'commons-logging', name: 'commons-logging', version: '1.2'
 	
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
-	implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.11.0'
-    
+	//implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.11.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
 
 	// https://mvnrepository.com/artifact/org.testng/testng
 	testImplementation group: 'org.testng', name: 'testng', version: '7.4.0'
@@ -62,10 +62,13 @@ dependencies {
 	implementation group: 'com.aventstack', name: 'extentreports', version: '5.0.7'
 	
 	// https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
-	implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.8.0'
+	//implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.0.3'
 	
 	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+	
+	// https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
+	implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.8.0'
 	
 }
 test {
