--- a/qa-stockwell/bin/test/ConfigStaging.properties
+++ b/qa-stockwell/bin/test/ConfigStaging.properties
@@ -2,7 +2,7 @@ username= padmavathi@stockwell.ai
 password= PadduUme@85
 current_url= https://staging.stockwell.ai/client/login
 testRailBaseURL= https://365retailmarkets.testrail.net/
-testRailUsername = padmavathi@stockwell.ai
+testRailUsername = padmavathi.d@365smartshop.com
 testRailPassword = PadduUme@85
 testRailBaseURI = add_result_for_case/
 testRailRunID = 4454
